--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="icon" href="/favicon.ico" />
         <title>GridStudy</title>
     </head>
-    <body class="singlestretch-parent singlestretch-child">
+    <body data-theme="bleu_iceberg" data-mode="light" class="singlestretch-parent singlestretch-child">
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root" class="singlestretch-parent singlestretch-child"></div>
         <script type="module" src="/src/index.jsx"></script>
